# derm-that-hurts

./: Dockerfile  README.md  compose.yaml  openapi.json  pyproject.toml  run.sh  start_backend.sh  start_frontend.sh
app/: data.py  main.py  main_fastapi.py  streamlit_app.py
backend/: Dockerfile  pyproject.toml
backend/src/: main_fastapi.py  model.py  utils.py
frontend/: Dockerfile  README.md  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/shared/: Button.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  PageTransition.tsx
frontend/src/pages/: CustomUpload.tsx  ExampleSelection.tsx  ImagePreview.tsx  Index.tsx  LandingPage.tsx  LoadingPage.tsx  ResultsReport.tsx
frontend/src/services/: api.ts
frontend/src/store/: appStore.ts
frontend/src/types/: app.ts
